--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,18 +1,15 @@
 mage: java:11
-
 before_script:
-  - chmod +x mvnw
-
+- chmod +x mvnw
 stages:
-  - staging
-  
+- staging
 staging:
-  stage: deploy
-  script: 
-    - ./mvnw package
-    - dpl --provider=heroku --app=$HEROKU_APP_STAGING --api-key=$HEROKU_API_KEY
+  stage: build
+  script:
+  - ./mvnw package
+  - dpl --provider=heroku --app=$HEROKU_APP_STAGING --api-key=$HEROKU_API_KEY
   artifacts:
     paths:
-      - target/eureka-0.0.1-SNAPSHOT.jar
+    - target/eureka-0.0.1-SNAPSHOT.jar
   only:
-    - master
+  - master
