--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,12 +6,9 @@ before_script:
 stages:
 - staging
 
-staging:
-  stage: build
-  script:
-  - ./mvnw package
+build:
+  stage: staging
+  script: ./mvnw package
   artifacts:
     paths:
-    - target/eureka-0.0.1-SNAPSHOT.jar
-  only:
-  - master
+      - target/eureka-0.0.1-SNAPSHOT.jar
