--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,4 +1,4 @@
-mage: java:latest
+image: java:latest
 
 before_script:
 - chmod +x mvnw
@@ -8,7 +8,8 @@ stages:
 
 build:
   stage: staging
-  script: ./mvnw package
+  script: 
+      - ./mvnw package
   artifacts:
     paths:
       - target/eureka-0.0.1-SNAPSHOT.jar
