--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,7 +9,10 @@ stages:
 build:
   stage: staging
   script: 
-      - ./mvnw package
+      - ./mvnw install
+      - dpl --provider=heroku --app=$HEROKU_APP_STAGING --api-key=$HEROKU_API_KEY
   artifacts:
     paths:
       - target/eureka-0.0.1-SNAPSHOT.jar
+  only:
+      - master
