--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,6 +13,6 @@ build:
       - dpl --provider=heroku --app=$HEROKU_APP_STAGING --api-key=$HEROKU_API_KEY
   artifacts:
     paths:
-      - target/eureka-0.0.1-SNAPSHOT.jar
+      - /builds/diego.alura/timesheet-io-eureka/target/eureka-0.0.1-SNAPSHOT.jar
   only:
       - master
