--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,4 +1,4 @@
-image: java:latest
+image: openjdk:latest
 
 before_script:
 - chmod +x mvnw
@@ -10,9 +10,8 @@ build:
   stage: staging
   script: 
       - ./mvnw install
-      - dpl --provider=heroku --app=$HEROKU_APP_STAGING --api-key=$HEROKU_API_KEY
   artifacts:
     paths:
-      - /builds/diego.alura/timesheet-io-eureka/target/eureka-0.0.1-SNAPSHOT.jar
+      - target/eureka-0.0.1-SNAPSHOT.jar
   only:
       - master
