--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,10 +1,10 @@
 image: openjdk:latest
 
 before_script:
-  - apt-get update -qy
   - chmod +x mvnw
-  - apt-get install -y ruby-dev
-  - gem install dpl
+    - apk update && apk add python
+    - apk add  ruby-dev
+    - apk add dpl
 
 stages:
 - staging
