--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,9 +2,7 @@ image: openjdk:latest
 
 before_script:
   - chmod +x mvnw
-    - apk update && apk add python
-    - apk add  ruby-dev
-    - apk add dpl
+  - apt-get update
 
 stages:
 - staging
