--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,4 +1,4 @@
-image: python:latest
+image: docker:latest
 
 before_script:
   - chmod +x mvnw
@@ -9,7 +9,6 @@ stages:
 
 build:
   stage: staging
-  image: openjdk:latest 
   script: 
       - ./mvnw install
       - dpl --provider=heroku --app=$HEROKU_APP_STAGING --api-key=$HEROKU_API_KEY
