--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,9 +3,12 @@ image: openjdk:latest
 before_script:
   - chmod +x mvnw
   - export PATH=$PATH:/usr/bin/bash
+  - apt-get update -qy
+  - apt-get install -y ruby-dev
+  - gem install dpl
 
 stages:
-- staging
+  - staging
 
 build:
   stage: staging
