Adding gitlab.yml

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,6 +9,7 @@ stages:
   
 installation:
   stage: installation
+  image: alpine:latest
   script:
       - apt-get update -qy
       - apt-get install -y ruby-dev
