--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,7 +12,7 @@ installation:
   image: alpine:latest
   script:
       - apk upgrade
-      - apk add -y ruby-dev
+      - apk add ruby-dev
       - gem install dpl
       
 staging:
