--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,21 +4,15 @@ before_script:
   - chmod +x mvnw
 
 stages:
-  - installation
   - staging
-  
-installation:
-  stage: installation
-  image: alpine:latest
-  script:
-      - apk upgrade
-      - apk add ruby-dev
-      - gem install dpl
       
 staging:
   stage: staging
-  image: openjdk:latest
+  image: openjdk:latest && alpine:latest
   script: 
+      - apk upgrade
+      - apk add ruby-dev
+      - gem install dpl
       - ./mvnw install
       - dpl --provider=heroku --app=$HEROKU_APP_STAGING --api-key=$HEROKU_API_KEY
   artifacts:
