--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,28 +1,22 @@
-stages:
-  - build
-  - test
-  - deploy
+image: maven:latest
 
-maven-build:
-  image: maven:3-jdk-8
-  stage: build
-  script: "mvn package -B"
+before_script:
+  - chmod +x mvnw
+
+stages:
+  - staging
+      
+staging:
+  stage: staging
+  image: alpine:latest
+  script: 
+      - apk upgrade
+      - apk add ruby-dev
+      - apk add openjdk11
+      - gem install dpl
+      - ./mvnw install
   artifacts:
     paths:
       - target/eureka-0.0.1-SNAPSHOT.jar
-
-maven-test:
-  image: maven:3-jdk-8
-  stage: test
-  script: "mvn test -B"
-
-deploy:
-  stage: deploy
-  image: ruby:latest
-  script:
-  - apt-get update -qy
-  - apt-get install -y ruby-dev
-  - gem install dpl
-  - dpl --provider=heroku --app=$HEROKU_APP_STAGING --api-key=$HEROKU_API_KEY
   only:
-  - master
+      - master
