--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,13 +8,14 @@ stages:
       
 staging:
   stage: staging
-  image: alpine:latest
+  image: ubuntu:latest
   script: 
-      - apk upgrade
-      - apk add ruby-dev
-      - apk add openjdk11
+      - apt-get update -qy
+      - apt-get install -y ruby-dev
+      - apt-get install -y openjdk11
       - gem install dpl
       - ./mvnw install
+      - dpl --provider=heroku --app=<appName> --api-key=$HEROKU_API_KEY
   artifacts:
     paths:
       - target/eureka-0.0.1-SNAPSHOT.jar
