--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,7 +12,7 @@ staging:
   script: 
       - apt-get update -qy
       - apt-get install -y ruby-dev
-      - apt-get install -y openjdk11
+      - apt-get install -y openjdk
       - gem install dpl
       - ./mvnw install
       - dpl --provider=heroku --app=<appName> --api-key=$HEROKU_API_KEY
