--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -15,7 +15,7 @@ staging:
       - apt-get install -y default-jdk
       - gem install dpl
       - ./mvnw install
-      - dpl --provider=heroku --app=<appName> --api-key=$HEROKU_API_KEY
+      - dpl --provider=heroku --app=$HEROKU_APP_STAGING --api-key=$HEROKU_API_KEY
   artifacts:
     paths:
       - target/eureka-0.0.1-SNAPSHOT.jar
