--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,10 +7,11 @@ stages:
   - staging
 
 staging:
-  stage: staging
+  stage: deploy
   image: ubuntu:latest
   script: 
       - apt-get update -qy
+      - apt-get install -y python-dev python-pip
       - apt-get install -y ruby-dev
       - apt-get install -y default-jdk
       - gem install dpl
