--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,11 +11,11 @@ staging:
   image: ubuntu:latest
   script: 
       - apt-get update -qy
-      - apt-get install -y ruby2.7
+      - apt-get install -y ruby-dev
+      - gem install dpl -v
       - apt-get install -y default-jdk
-      - gem install dpl -v 1.8.21
       - ./mvnw install
-      - dpl --provider=heroku --app=$HEROKU_APP_STAGING --api-key=$HEROKU_API_KEY
+      - dpl --provider=heroku --app=eureka-heroku-env-staging --api-key=42b3fe32-89db-499d-a5eb-efea04adc79c
   artifacts:
     paths:
       - target/eureka-0.0.1-SNAPSHOT.jar
