Adding gitlab.yml

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,7 +9,11 @@ stages:
 staging:
   type: deploy
   stage: staging
+  image: ubuntu:latest
   script: 
+      - apt-get update -qy
+      - apt-get install -y ruby-dev
+      - gem install dpl
       - dpl --provider=heroku --app=eureka-heroku-env-staging --api-key=42b3fe32-89db-499d-a5eb-efea04adc79c
   artifacts:
     paths:
