--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -14,7 +14,7 @@ staging:
       - apt-get update -qy
       - apt-get install -y ruby-dev
       - gem install dpl
-      - dpl --provider=heroku --app=./target/eureka-0.0.1-SNAPSHOT.jar --api-key=42b3fe32-89db-499d-a5eb-efea04adc79c
+      - git remote add heroku https://heroku:42b3fe32-89db-499d-a5eb-efea04adc79c@git.heroku.com/eureka-heroku-env-staging.git
   artifacts:
     paths:
       - target/eureka-0.0.1-SNAPSHOT.jar
