--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,7 +12,7 @@ staging:
   script: 
       - apt-get update -qy
       - apt-get install -y ruby-dev
-      - gem install dpl -y
+      - gem install dpl
       - apt-get install -y default-jdk
       - ./mvnw install
       - dpl --provider=heroku --app=$HEROKU_APP_STAGING --api-key=$HEROKU_API_KEY
